# ti700silentBridge

./: .gitignore  CMakeLists.txt  sdkconfig.dbg  sdkconfig.defaults  sdkconfig.dev  sdkconfig.efu  sdkconfig.prd
boards/esp32s3/: board_cfg.h  partition.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/inc/: bq24296.hpp  glue.h  modem_pwm.hpp
main/src/: bq24296.cpp  logUtil.cpp  modem_pwm.cpp
